# milo-assistant-py

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ruff.yml
milo/: main.py
milo/agents/: milo.py
milo/tools/: tool_factory.py
milo/tools/utilities/: get_current_time.py
milo/utils/: console.py  mcp.py  timezone.py
milo_agent/: agent.py  workflows.py
milo_agent/tools/: calendar_tools.py  git_tools.py  planning_tools.py
scripts/: run_chat.py  run_milo_chat.py
