[project]
name = "milo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-experimental>=0.3.4",
    "openai>=1.72.0",
    "pyautogen[agentchat,autogen-core,autogen-ext]>=0.8.5",
    "python-dotenv>=1.1.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "tzlocal>=5.2",
]

[tool.uv]
prerelease = "allow"
